update docker & compose